src/test/ui/elide-errors-on-mismatched-tuple.stderr
error[E0308]: mismatched types
  --> $DIR/elide-errors-on-mismatched-tuple.rs:14:9
   |
LL |     let (a, b, c) = (A::new(), A::new()); // This tuple is 2 elements, should be three
   |         ^^^^^^^^^ expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected type `(A, A)`
              found type `(_, _, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
